--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <div class="content">
         <h2>Detalles del Evento</h2>
-        <p><strong>Fecha:</strong> [Fecha de la boda]</p>
+        <p><strong>Fecha:</strong> 31 de Mayo </p>
         <p><strong>Lugar:</strong> [Ubicación del evento]</p>
         <p>Únete a nosotros en este día tan especial para celebrar el amor y la felicidad.</p>
 
