--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
          <button id="playButton">Reproducir Música</button>
 
          <!-- Elemento de audio -->
-         <audio id="audio" src="./audio/song.mp3" type="audio/mpeg"></audio>
+         <audio id="audio" src="./audio/song2.weba" type="audio/webm"></audio>
 
         <div class="gallery">
             <img src="./images/1728014497434.jpg" alt="Foto 1">
