--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invitación de Boda</title>
     <style>
-        body {
+         body {
             font-family: 'Georgia', serif;
             margin: 0;
             padding: 0;
             background-color: #f9f6f2; /* Fondo romántico */
             color: #4a4a4a;
             text-align: center;
+            background-image: url('./images/fondo.jpg'); 
+            background-size: cover;
+            background-position: center; 
         }
 
         .hero {
             position: relative;
-            background-image: url('./images/1728333412717.jpg'); /* Cambiar por una foto de los novios */
-            background-size: cover;
-            background-position: center;
             height: 100vh;
             display: flex;
             flex-direction: column;
@@ -26,6 +26,10 @@
             align-items: center;
             color: white;
             text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+        }
+        .imgNovios {
+            width: 300px; /* Ajusta el ancho según sea necesario */
+        
         }
 
         .hero h1 {
@@ -144,11 +148,13 @@
         <h1>¡Nos Casamos!</h1>
         <p>Ángel David & Angie Madeleyne</p>
     </div>
+    <img class="imgNovios" src="./images/image1.png" alt="Foto de los Novios">
+    
 
     <div class="content">
         <h2>Detalles del Evento</h2>
         <p><strong>Fecha:</strong> 31 de Mayo </p>
-        <p><strong>Lugar:</strong> [Ubicación del evento]</p>
+        <p><strong>Lugar:</strong>Terraza Lemaitré Club naval, Catagena de Indias</p>
         <p>Únete a nosotros en este día tan especial para celebrar el amor y la felicidad.</p>
 
 
