--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             background-image: url('./images/fondo.jpg'); 
             background-size: cover;
             background-position: center; 
-            background-color: rgba(49, 48, 48, 0.1); /* Capa semitransparente */
-            background-blend-mode: overlay; /* Mezcla con la imagen de fondo */
+          /*  background-color: rgba(49, 48, 48, 0.1); /* Capa semitransparente */
+          /*  background-blend-mode: overlay; /* Mezcla con la imagen de fondo */
         }
 
         .hero {
