agregando fuentes y estilos

--- a/index.html
+++ b/index.html
@@ -233,13 +233,21 @@
             font-size: 2rem;
             font-weight: bold;
             margin: 5px 0;
-            color: #4682B4;
+            color: #bf946e;
         }
 
         .label {
             font-size: 1rem;
             text-transform: uppercase;
-            color: #6c757d;
+            color: #648099;
+        }
+        .logo {
+            width: 100px;
+            height: 100px;
+        }
+        .fecha {
+            width: 600px;
+            height: 600px;
         }
     </style>
 </head>
@@ -253,14 +261,13 @@
         <p class="versiculo">¡Graba mi nombre en tu corazón! <br>
         ¡Graba mi imagen en tu brazo! <br>
         </p>
+        <img class="logo" src="./images/LogoRecurso 6-8.png" alt="">
     </div>
    <!-- <img class="imgNovios" src="./images/image1.png" alt="Foto de los Novios">-->
     
 
     <div class="content">
-        <h2>Detalles del Evento</h2>
-        <p><strong>Fecha:</strong> 31 de Mayo </p>
-        <p><strong>Hora:</strong> 4:00 pm </p>
+        <img class="fecha" src="./images/fecha.png" alt="">
         <div class="countdown">
             <div class="time-container">
                 <div class="label">Días</div>
@@ -279,13 +286,13 @@
                 <div class="time" id="seconds">00</div>
             </div>
         </div>
-        <p><strong>Lugar:</strong>Terraza Lemaitré Club naval, Catagena de Indias</p>
+        <br>
+        <br>
         <div class="gallery">
             <img src="./images/20231231_104452.jpg" alt="">
             <img src="./images/20231231_104452.jpg" alt="Foto 2">
             <img src="./images/20240106_110359.jpg" alt="Foto 3">
         </div>
-        <h1>Ubicación de nuestra boda</h1>
          <!-- Botón para abrir la ubicación en Google Maps -->
         <button 
             class="location-button"
