ajuste imagenes para cel

--- a/index.html
+++ b/index.html
@@ -267,7 +267,9 @@
     
 
     <div class="content">
-        <img class="fecha" src="./images/fecha.png" alt="">
+        <div>
+            <img class="fecha" src="./images/fecha.png" alt="">
+         </div>
         <div class="countdown">
             <div class="time-container">
                 <div class="label">Días</div>
