ajuste div images

--- a/index.html
+++ b/index.html
@@ -349,9 +349,13 @@
     <div class="content">
         <h2>Codigo de vestimenta</h2>
         <p>Hombres</p>
-        <img src="./images/1728014497434.jpg" alt="Formal">
+        <div class="cFecha">
+            <img class="fecha" src="./images/1728014497434.jpg" alt="Formal">
+        </div>
         <p>Mujeres</p>
-        <img src="./images/1728333412717.jpg" alt="Formal">
+        <div class="cFecha">
+            <img class="fecha" src="./images/1728333412717.jpg" alt="Formal">
+        </div>
         <p>¡El fuego del amor es una llama que Dios mismo ha encendido! <br>
             Cantares: 8:6</p>
     </div>
