--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             color: white;
             text-shadow: 0 5px 10px rgb(41, 109, 173);
         }
+        .hero .ayd{
+            text-shadow: 0 5px 10px rgb(9, 2, 57);
+        }
         .imgNovios {
             width: 300px; /* Ajusta el ancho según sea necesario */
         
@@ -283,7 +286,7 @@
         <p class="versiculo">¡Graba mi nombre en tu corazón! <br>
         ¡Graba mi imagen en tu brazo! <br>
         </p>
-        <img class="logo" src="./images/LogoRecurso 6-8.png" alt="">
+        <img class="logo" src="./images/LogoRecurso 4logodefayd3Bordes-8.png" alt="">
     </div>
    <!-- <img class="imgNovios" src="./images/image1.png" alt="Foto de los Novios">-->
     
