--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             padding: 20px;
             max-width: 800px;
             margin: 0 auto;
-            background: #ffffff;
+            background: #faf6f6;
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
@@ -212,6 +212,7 @@
             justify-content: center;
             gap: 20px;
             margin-top: 50px;
+            margin-bottom: 5rem;
         }
 
         .time-container {
@@ -321,8 +322,7 @@
                 <div class="time" id="seconds">00</div>
             </div>
         </div>
-    </div>
-    <div class="content">
+
         <div class="gallery">
             <img src="./images/20231231_104452.jpg" alt="">
             <img src="./images/20231231_104452.jpg" alt="Foto 2">
@@ -344,8 +344,6 @@
             <p>¡Tan fuerte es el amor como la muerte! <br>
                 ¡Tan cierta es la pasión como la tumba! <br></p>
         </div>
-    </div>
-    <div class="content">
         <h2>Codigo de vestimenta</h2>
         <p>Hombres</p>
         <div class="cFecha">
