agregando nuevos cambios de dress code

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             font-size: 1.1em;
             margin-top: 0px;
             animation: fadeIn 3s ease-in-out;
-            color: #111e33;
+            color: #4b6ea4;
         }
 
         .content {
@@ -329,9 +329,9 @@
         </div>
 
         <div class="gallery">
-            <img src="./images/20231231_104452.jpg" alt="">
-            <img src="./images/20231231_104452.jpg" alt="Foto 2">
-            <img src="./images/20240106_110359.jpg" alt="Foto 3">
+            <img src="images/terraza.png" alt="">
+            <img src="images/terraza2.png" alt="Foto 2">
+            <img src="images/clubnaval.png" alt="Foto 3">
         </div>
 
         <p>Únete a nosotros en este día tan especial para celebrar el amor y la felicidad.</p>
